TASQ-305/3] Too long task name no longer overlaps point badge

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -122,7 +122,6 @@ div.agile-card > .bottom-tab {
 }
 .pointsdiv{
     display: table-cell;
-    margin-top: -20px
 }
 
 .max-width {
